--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,4 +5,4 @@ permalink: /talks/
 author_profile: true
 ---
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+<p style="text-decoration:underline;"><a href="https://kaziramisarifa.github.io/talkmap.html">See a map of all the places I've given a talk!</a></p>
